Resolve Article declaration issues across multiple files